--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-title: DojoCon Japan 2016
 markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude:
@@ -9,3 +8,7 @@ exclude:
   - config.rb
   - npm-debug.log
   - README.md
+
+title: DojoCon Japan 2016
+description: DojoCon Japan 2016
+url: http://dojocon-japan.github.io
