--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ exclude:
 
 title: DojoCon Japan 2016
 description: DojoCon Japan 2016
-url: http://dojocon-japan.github.io
+url: http://dojocon.coderdojo.jp
