--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -2,11 +2,10 @@
   "port": 4000,
 
   "tasks": {
-    "sass":         true,
-    "compass":      false,
     "browserify":   true,
     "imagemin":     true,
-    "jekyll":       true,
+    "sass":         true,
+    "server":       true,
     "watch":        true
   },
 
@@ -32,12 +31,6 @@
       "last 2 versions",
       "Firefox ESR"
     ]
-  },
-
-  "compass": {
-    "config":   "./config.rb",
-    "style":    "compressed",
-    "comments": false
   },
 
   "js": {
