--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
+# Site settings
+title: My New Frasco Site
+description: Jekyll starter project including full setup for Gulp, Sass, Autoprefixer, Bourbon/Neat/Bitters, Browserify, Imagemin, Browsersync, etc.
+url: http://ixkaito.github.io # the base hostname & protocol for your site
+baseurl: '/frasco' # the subpath of your site, e.g. /blog
+
+# Build settings
+markdown: kramdown
 exclude:
   - node_modules
   - gulpfile.js
@@ -6,10 +14,3 @@ exclude:
   - npm-debug.log
   - README.md
   - LICENSE
-
-title: DojoCon Japan 2016
-description: DojoCon Japan 2016
-url: http://dojocon.coderdojo.jp
-baseurl: /
-
-environment: development
