--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: My New Frasco Site
-description: Jekyll starter project including full setup for Gulp, Sass, Autoprefixer, Bourbon/Neat/Bitters, Browserify, Imagemin, Browsersync, etc.
-url: http://ixkaito.github.io # the base hostname & protocol for your site
-baseurl: '/frasco' # the subpath of your site, e.g. /blog
+title: DojoCon Japan 2016 - The more dojos, the more cool coders. -
+description: DojoCon Japan 2016 - The more dojos, the more cool coders. -
+url: http://dojocon.coderdojo.jp
+baseurl: ''
 
 # Build settings
 markdown: kramdown
