Add compress html

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,12 @@ exclude:
   - npm-debug.log
   - README.md
   - LICENSE
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  ignore:
+    envs: [development]
+  # blanklines: true
+  # profile: true
+  startings: [html, head, body]
