Add share links

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,10 @@ baseurl: ''
 entryurl: ''
 venueurl: ''
 
+twitter:
+  id: DojoConJapan
+  hashtag: DojoConJP
+
 # Build settings
 markdown: kramdown
 exclude:
