--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
     "yargs": "^4.7.0"
+  },
+  "dependencies": {
+    "jquery": "^2.2.4"
   }
 }
