Add the link of the venue. Fix #3

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://dojocon-japan.github.io
 baseurl: ''
 
 entryurl: ''
-venueurl: ''
+venueurl: http://www.uchida.co.jp/company/showroom/canvas/osaka/
 
 twitter:
   id: DojoConJapan
