Improve the deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-    - CNAME: dojocon.coderdojo.jp
+    - URL: dojocon.coderdojo.jp
     - GIT_USER: Kite
     - GIT_EMAIL: ixkaito@gmail.com
     - GITHUB_RELEASE_REPO: dojocon-japan/dojocon.coderdojo.jp
@@ -29,9 +29,10 @@ script:
   - htmlproofer ./_site --check-html --url-ignore "/jp\.linkedin\.com\/in\/tomomikosaka/","/mymckok\.tumblr\.com/"
   - if [ "$TRAVIS_PULL_REQUEST" != "false" -o "$TRAVIS_BRANCH" != "$RELEASE_BRANCH" ]; then exit 0; fi
   - if [ ! -f CNAME ]; then touch CNAME; fi
-  - echo $CNAME > CNAME
+  - echo $URL > CNAME
 
 after_success:
+  - sed -i '' -e "s/^url:.*/url: $URL/" _config.yml
   - git config user.name "${GIT_USER}"
   - git config user.email "${GIT_EMAIL}"
   - git add --all && git commit -m "Deploy from Travis CI"
