--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ node_js:
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-    - URL: dojocon.coderdojo.jp
+    - URI_SCHEME: http://
+    - CNAME: dojocon.coderdojo.jp
     - GIT_USER: Kite
     - GIT_EMAIL: ixkaito@gmail.com
     - GITHUB_RELEASE_REPO: dojocon-japan/dojocon.coderdojo.jp
@@ -29,8 +30,8 @@ script:
   - htmlproofer ./_site --check-html --url-ignore "/jp\.linkedin\.com\/in\/tomomikosaka/","/mymckok\.tumblr\.com/"
   - if [ "$TRAVIS_PULL_REQUEST" != "false" -o "$TRAVIS_BRANCH" != "$RELEASE_BRANCH" ]; then exit 0; fi
   - if [ ! -f CNAME ]; then touch CNAME; fi
-  - echo $URL > CNAME
-  - sed -i '' -e "s/^url:.*/url: $URL/" _config.yml
+  - echo $CNAME > CNAME
+  # - sed -i '' -e "s/^url:.*/url: $URI_SCHEME$CNAME/" _config.yml
 
 after_success:
   - git config user.name "${GIT_USER}"
