Improve the automatic deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ node_js:
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-    - URI_SCHEME: http://
+    - URI_SCHEME: http
     - CNAME: dojocon.coderdojo.jp
+    - BASEURL: ''
     - GIT_USER: Kite
     - GIT_EMAIL: ixkaito@gmail.com
     - GITHUB_RELEASE_REPO: dojocon-japan/dojocon.coderdojo.jp
@@ -31,7 +32,7 @@ script:
   - if [ "$TRAVIS_PULL_REQUEST" != "false" -o "$TRAVIS_BRANCH" != "$RELEASE_BRANCH" ]; then exit 0; fi
   - if [ ! -f CNAME ]; then touch CNAME; fi
   - echo $CNAME > CNAME
-  # - sed -i '' -e "s/^url:.*/url: $URI_SCHEME$CNAME/" _config.yml
+  - echo url:\ ${URI_SCHEME}://${CNAME} >> _config.yml
 
 after_success:
   - git config user.name "${GIT_USER}"
