--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
 script:
   - jekyll build
   - npm test
-  - htmlproofer ./_site --check-html --url-ignore "/jp\.linkedin\.com\/in\/tomomikosaka/","/mymckok\.tumblr\.com/","/facebook\.com/"
+  - htmlproofer ./_site --check-html --url-ignore "/jp\.linkedin\.com\/in\/tomomikosaka/","/mymckok\.tumblr\.com/","/facebook\.com/","/mainichi\.jp/"
   - if [ "$TRAVIS_PULL_REQUEST" != "false" -o "$TRAVIS_BRANCH" != "$RELEASE_BRANCH" ]; then exit 0; fi
   - if [ ! -f CNAME ]; then touch CNAME; fi
   - echo $CNAME > CNAME
